# NewMaxEnt

./: .clang-format  .clangd  .gitignore  .rsync-filter  CMakeLists.txt  LICENSE  README.md  cspell.json  input_example.json  log_g.csv  raw_data.csv
include/core/: CostFunction.hpp  MaxEntCore.hpp  centered_moments.hpp  compute_model_statistics.hpp  compute_model_statistics_full.hpp  cost_function.hpp  energy.hpp  max_ent_core.hpp  parameters.hpp  run_parameters.hpp
include/entropy/: EntropyModel.hpp  ShannonEntropy.hpp  TsallisEntropy.hpp
include/io/: make_file_names.hpp  parse_parameters.hpp  read_core_json.hpp  read_model_minimal_from_json.hpp  read_raw_data.hpp  read_raw_samples.hpp  read_trained_json.hpp  write_g_E.hpp  write_json.hpp  write_output_json.hpp  write_trained_json.hpp
include/trainers/: base_trainer.hpp  compute_cost.hpp  full_ensemble_trainer.hpp  heat_bath_pretrain.hpp  heat_bath_trainer.hpp  heatbath_pretrain.hpp  wang_landau_trainer.hpp
include/util/: edge.hpp  logger.hpp  replica_state.hpp  spin_permutations_iterator.hpp  utilities.hpp
include/utils/: binary_permutations_sequence.hpp  centered_moments.hpp  compute_data_statistics.hpp  correlation_histogram.hpp  general_histogram.hpp  get_logger.hpp  gray_code_sequence.hpp  replica_correlation_histogram.hpp  utilities.hpp
include/wg/: wg.hpp
include/workflows/: full_ensemble_no_update.hpp  full_ensemble_training_workflow.hpp  generateSyntheticWorkFlow.hpp  run_full_enumeration_workflow.hpp  run_temperature_dependence.hpp  run_thermo_sweep.hpp  training_workflow.hpp
src/: full_ensemble_training_workflow.cpp  main.cpp
src/core/: CostFunction.cpp  MaxEntCore.cpp  centered_moments.cpp  compute_model_statistics.cpp  compute_model_statistics_full.cpp  compute_sample_statistics.cpp  cost_function.cpp  initialize_fields.cpp  max_ent_core.cpp  run_full_enumeration.cpp  run_parameters.cpp  update_model_parameters.cpp
src/entropy/: ShannonEntropy.cpp  TsallisEntropy.cpp
src/io/: parse_parameters.cpp  read_core_json.cpp  read_model_minimal_from_json.cpp  read_raw_data.cpp  write_output_json.cpp  write_trained_json.cpp
src/trainers/: base_trainer_constructor.cpp  base_trainer_energy_all_pairs.cpp  base_trainer_update_model_parameters.cpp  compute_full_ensemble_averages.cpp  compute_heat_bath_averages.cpp  compute_model_averages_full.cpp  compute_model_averages_heat_bath.cpp  energy_all_pairs.cpp  full_ensemble_compute_model_averages.cpp  full_ensemble_compute_model_averages_parallel.cpp  full_ensemble_train.cpp  full_ensemble_trainer.cpp  full_ensenble_trainer.cpp  heat_bath_compute_model_averages.cpp  heat_bath_compute_model_averages_parallel.cpp  heat_bath_train.cpp  heat_bath_trainer.cpp  heat_bath_trrain.cpp  train_heat_bath.cpp  update_model_parameters.cpp  wang_landau_compute_density_states.cpp  wang_landau_compute_model_averages.cpp  wang_landau_train.cpp  wang_landau_trainer.cpp
src/util/: spin_permutation_iterator.cpp  utilities.cpp
src/utils/: compute_centered_moments.cpp  compute_data_statistics.cpp  spin_permutation_iterator.cpp
src/workflows/: Wang_Landau_training_workflow.cpp  (+7 more)
tests/: input_example.json  input_train_20.json  plot_g_E.ipynb  test_binary_permutations.cpp  test_compute_model_statistics.cpp  test_compute_sample_statiscs.cpp  test_compute_sample_statistics.cpp  test_energy.cpp  test_gray_code_sequence.cpp  test_initialize_from_params.cpp  test_main.cpp  test_parse_params.cpp  test_read_raw_samples.cpp  test_spin_permutations.cpp
(+2 files in other folders)
